# mine-agent

./: .gitignore  ANALYTICS_VERIFY.md  README.md  gradle.properties  settings.gradle.kts
mod/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  wrapper.gradle.kts
mod-env/: build.gradle.kts  client_integration_test.py  client_test.py
mod-env/run/: mine_env.properties
mod-env/src/client/java/dev/replaycraft/mcenv/mixin/: ClientPlayerEntityMixin.java  MinecraftClientAccessor.java
mod-env/src/client/kotlin/dev/replaycraft/mcenv/: EnvConfig.kt  MineEnvClient.kt
mod-env/src/client/kotlin/dev/replaycraft/mcenv/input/: AgentInputBuffer.kt  AgentInputState.kt
mod-env/src/client/kotlin/dev/replaycraft/mcenv/observation/: ObservationCapture.kt
mod-env/src/client/kotlin/dev/replaycraft/mcenv/socket/: EnvServer.kt  MessageProtocol.kt
mod-env/src/main/resources/: fabric.mod.json  mine_env.mixins.json
mod/src/client/java/dev/replaycraft/mcap/mixin/: AdvancementMixin.java  ClientPlayNetworkHandlerMixin.java  ClientPlayerEntityMixin.java  MinecraftClientAccessor.java  (+7 more)
mod/src/client/kotlin/dev/replaycraft/mcap/: CaptureWriter.kt  McapReplayClient.kt
mod/src/main/resources/: fabric.mod.json  libmcap_native.dylib  mcap_replay.mixins.json
mod/src/main/resources/assets/mcap_replay/lang/: en_us.json
mod/src/main/resources/scripts/: convert_upload.py
native/: Cargo.toml  README.md
native/src/: lib.rs
scripts/: convert_upload.py  record_and_export.sh  test_convert_upload.py
sql/: create_leaderboard_views.sql  migrate_add_leaderboard_columns.sql
(+37 files in other folders)
