[package]
name = "mcap_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcap_native"
crate-type = ["cdylib"]

[[bin]]
name = "inspect_cap"
path = "src/bin/inspect_cap.rs"

[dependencies]
jni = "0.21"
rusqlite = { version = "0.31", features = ["bundled"] }
lz4_flex = "0.11"
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
once_cell = "1.19"
bytemuck = "1.14"
